[gd_scene load_steps=4 format=3 uid="uid://ef4cgjme04h7"]

[ext_resource type="Script" uid="uid://kujexnxtbrwd" path="res://enemies/enemy_7.gd" id="1_t1m82"]
[ext_resource type="Texture2D" uid="uid://dk2h43yd443bp" path="res://Assets/Foozle_2DS0012_Void_EnemyFleet_1/Kla'ed/Base/PNGs/Kla'ed - Battlecruiser - Base.png" id="2_25rae"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bjrn2"]
size = Vector2(88, 71)

[node name="CharacterBody_enemy_7" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_t1m82")

[node name="enemy_7_Battlecruiser" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 4.71239
texture = ExtResource("2_25rae")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, -0.5)
shape = SubResource("RectangleShape2D_bjrn2")

[node name="BulletTimer" type="Timer" parent="."]
autostart = true

[node name="DeathSprite_EN_7" type="Sprite2D" parent="."]

[node name="AnimationPlayer_EN_7" type="AnimationPlayer" parent="."]

[node name="DamageLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
